# city-payroll-data-pipeline

./: .gitignore  .sqlmeshignore  README.md  admin_setup_storage.py  clientgov_req.py  clientgov_send.py  config.yaml  export_parquetclean.py  export_parquetraw.py  generate_report.py  interactive_client.py  serve_flight.py  users.json
.cache/model_definition/: 0_227_27_28_100__models__corporate__fct_corporate__1766469465_7289557__3664250606__The_Los_Angeles_City_Controller_Office_corporate_corporate_la_payroll_2013__local  0_227_27_28_100__models__corporate__fct_corporate__1766469465_7289557__503956963__main_system__local  0_227_27_28_100__models__corporate__fct_corporate__1766469465_7289557__604172962__JUS_Medicare_Health_Services_hospital_hospital_data__local  0_227_27_28_100__models__corporate__stg_corporate__1766465837_40044__3664250606__The_Los_Angeles_City_Controller_Office_corporate_corporate_la_payroll_2013__local  0_227_27_28_100__models__corporate__stg_corporate__1766465837_40044__503956963__main_system__local  0_227_27_28_100__models__corporate__stg_corporate__1766465837_40044__604172962__JUS_Medicare_Health_Services_hospital_hospital_data__local  0_227_27_28_100__models__education__fct_corporate__1766469481_2876544__3664250606__The_Los_Angeles_City_Controller_Office_corporate_corporate_la_payroll_2013__local  0_227_27_28_100__models__education__fct_corporate__1766469481_2876544__503956963__main_system__local  (+27 more)
cpp_client/: CMakeLists.txt  client.cpp
models/: fct_payroll.sql  stg_payroll.sql
web_dashboard/: app.py  backend_client.py
(+51 files in other folders)
